data/derived/sp14/progs/unify/prog3696.ml.out
Characters 78-100:
  total + if num mod 10 <> 0 then digitalRoot2((sumList(digits(num))) total) else 0;;
                                               ^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type int
       This is not a function; it cannot be applied.
